New feature: 2843516	Sort field list by alphabetic order

--- a/WebContent/WEB-INF/zul/schema/fields.zul
+++ b/WebContent/WEB-INF/zul/schema/fields.zul
@@ -131,7 +131,7 @@
 
 		<panel title="Field list" border="normal">
 			<panelchildren>
-				<listbox model="@{fields.list}"
+				<listbox model="@{fields.sortedList}"
 					selectedItem="@{fields.selectedField}">
 					<listhead>
 						<listheader label="name" />
