--- a/WebContent/WEB-INF/zul/query/index.zul
+++ b/WebContent/WEB-INF/zul/query/index.zul
@@ -26,7 +26,7 @@
 		<button label="Load" forward="onLoadRequest" />
 		<button label="Remove" forward="onRemove" />
 		<separator />
-		<label>Request name</label>
+		<label>Query name</label>
 		<textbox value="@{query.request.requestName}" />
 		<button label="Save" forward="onSaveRequest" />
 	</hbox>
