--- a/WebContent/WEB-INF/zul/parser/parserList.zul
+++ b/WebContent/WEB-INF/zul/parser/parserList.zul
@@ -17,54 +17,75 @@
 -->
 <window id="parserList"
 	use="com.jaeksoft.searchlib.web.controller.parser.ParserListController">
-	<listbox mold="select" selectedItem="@{parserList.selectedParser}"
-		model="@{parserList.parserSet}">
-		<listitem self="@{each=parser}" label="@{parser.parserName}" />
-	</listbox>
-	<vbox width="100%" visible="@{parserList.parserSelected}">
-		<grid visible="@{parserList.parserExtension}"
-			model="@{parserList.selectedParser.extensionSet}">
-			<columns>
-				<column label="Supported extension" />
-			</columns>
-			<rows>
-				<row self="@{each=entry}">
-					<label value="@{entry}" />
-				</row>
-			</rows>
-		</grid>
-		<grid visible="@{parserList.parserMimeType}"
-			model="@{parserList.selectedParser.mimeTypeSet}">
-			<columns>
-				<column label="Supported mime type" />
-			</columns>
-			<rows>
-				<row self="@{each=entry}">
-					<label value="@{entry}" />
-				</row>
-			</rows>
-		</grid>
-		<hbox align="center">
-			<listbox mold="select" model="@{parserList.parserFieldList}"
-				selectedItem="@{parserList.selectedParserField}">
-				<listitem self="@{each='parserField'}"
-					label="@{parserField.name}" />
-			</listbox>
-			<label>linked in</label>
-			<listbox mold="select" model="@{parserList.indexFieldList}"
-				selectedItem="@{parserList.selectedIndexField}">
-				<listitem self="@{each='indexField'}"
-					label="@{indexField.name}" />
-			</listbox>
-			<button label="add" forward="onAdd" />
-		</hbox>
-		<listbox model="@{parserList.selectedParser.fieldMap.list}"
-			itemRenderer="@{parserList}">
-			<listhead>
-				<listheader label="Parser field" />
-				<listheader label="Index field" />
-				<listheader label="Action" />
-			</listhead>
+	<hbox align="center">
+		<label value="Type of parser: " />
+		<listbox mold="select"
+			selectedItem="@{parserList.selectedParser}"
+			model="@{parserList.parserSet}">
+			<listitem self="@{each=parser}"
+				label="@{parser.parserName}" />
 		</listbox>
+	</hbox>
+	<separator height="5px" />
+	<vbox width="100%" visible="@{parserList.parserSelected}">
+		<panel title="Supported extension" border="normal">
+			<panelchildren>
+				<grid width="100%"
+					visible="@{parserList.parserExtension}"
+					model="@{parserList.selectedParser.extensionSet}"
+					fixedLayout="true">
+					<rows>
+						<row self="@{each=entry}">
+							<label value="@{entry}" />
+						</row>
+					</rows>
+				</grid>
+			</panelchildren>
+		</panel>
+		<separator height="5px" />
+		<panel title="Supported MIME type" border="normal">
+			<panelchildren>
+				<grid width="100%"
+					visible="@{parserList.parserMimeType}"
+					model="@{parserList.selectedParser.mimeTypeSet}"
+					fixedLayout="true">
+					<rows>
+						<row self="@{each=entry}">
+							<label value="@{entry}" />
+						</row>
+					</rows>
+				</grid>
+			</panelchildren>
+		</panel>
+		<separator height="5px" />
+		<panel title="Field mapping" border="normal">
+			<panelchildren>
+				<hbox align="center">
+					<listbox mold="select"
+						model="@{parserList.parserFieldList}"
+						selectedItem="@{parserList.selectedParserField}">
+						<listitem self="@{each='parserField'}"
+							label="@{parserField.name}" />
+					</listbox>
+					<label>linked in</label>
+					<listbox mold="select"
+						model="@{parserList.indexFieldList}"
+						selectedItem="@{parserList.selectedIndexField}">
+						<listitem self="@{each='indexField'}"
+							label="@{indexField.name}" />
+					</listbox>
+					<button label="add" forward="onAdd" />
+				</hbox>
+				<listbox
+					model="@{parserList.selectedParser.fieldMap.list}"
+					itemRenderer="@{parserList}">
+					<listhead>
+						<listheader label="Parser field" />
+						<listheader label="Index field" />
+						<listheader label="Action" />
+					</listhead>
+				</listbox>
+			</panelchildren>
+		</panel>
 	</vbox>
 </window>
