- new feature 2847820 - Add Russian and Chinese language support. - new feature 2846159 - Replace textfield by a menu for language selection

--- a/WebContent/WEB-INF/zul/query/general.zul
+++ b/WebContent/WEB-INF/zul/query/general.zul
@@ -58,7 +58,12 @@
 			</row>
 			<row>
 				<label>Language:</label>
-				<textbox cols="10" value="@{general.request.lang}" />
+				<listbox mold="select"
+					selectedItem="@{general.request.lang}"
+					model="@{general.languageEnum}">
+					<listitem self="@{each=langEnum}"
+						label="@{langEnum.name}" value="@{langEnum}" />
+				</listbox>
 			</row>
 		</rows>
 	</grid>
