--- a/WebContent/WEB-INF/zul/update/form.zul
+++ b/WebContent/WEB-INF/zul/update/form.zul
@@ -17,42 +17,53 @@
 -->
 <window id="updateForm"
 	use="com.jaeksoft.searchlib.web.controller.update.UpdateFormController">
-	<grid>
-		<columns>
-			<column />
-			<column align="right" />
-		</columns>
-		<rows>
-			<row>
-				<hbox>
-					<listbox mold="select"
-						model="@{updateForm.fieldList}"
-						selectedItem="@{updateForm.selectedField}">
-						<listitem self="@{each='field'}"
-							label="@{field.name}" />
-					</listbox>
-					<button label="add" forward="onAdd" />
-				</hbox>
-				<button label="Update" forward="onUpdate" />
-			</row>
-		</rows>
-	</grid>
-	<listbox model="@{updateForm.fieldDocumentList}">
-		<listitem self="@{each='fieldDocument'}">
-			<listcell>
-				<panel title="@{fieldDocument.field}"
-					collapsible="true">
-					<panelchildren>
-						<listbox model="@{fieldDocument.fieldValueList}"
-							itemRenderer="@{updateForm}">
-							<listhead>
-								<listheader />
-								<listheader width="20px" />
-							</listhead>
-						</listbox>
-					</panelchildren>
-				</panel>
-			</listcell>
-		</listitem>
-	</listbox>
+	<panel title="1. Select the language of the document"
+		border="normal">
+		<panelchildren>
+			<listbox mold="select" selectedItem="@{updateForm.lang}"
+				model="@{updateForm.languageEnum}">
+				<listitem self="@{each=langEnum}"
+					label="@{langEnum.name}" value="@{langEnum}" />
+			</listbox>
+		</panelchildren>
+	</panel>
+	<separator height="10px" />
+	<panel title="2. Add field(s) to the document" border="normal">
+		<panelchildren>
+			<hbox align="center">
+				<label value="Select a field: " />
+				<listbox mold="select" model="@{updateForm.fieldList}"
+					selectedItem="@{updateForm.selectedField}">
+					<listitem self="@{each='field'}"
+						label="@{field.name}" />
+				</listbox>
+				<button label="add" forward="onAdd" />
+			</hbox>
+			<listbox model="@{updateForm.fieldDocumentList}">
+				<listitem self="@{each='fieldDocument'}">
+					<listcell>
+						<panel title="@{fieldDocument.field}"
+							collapsible="true">
+							<panelchildren>
+								<listbox
+									model="@{fieldDocument.fieldValueList}"
+									itemRenderer="@{updateForm}">
+									<listhead>
+										<listheader />
+										<listheader width="20px" />
+									</listhead>
+								</listbox>
+							</panelchildren>
+						</panel>
+					</listcell>
+				</listitem>
+			</listbox>
+		</panelchildren>
+	</panel>
+	<separator height="10px" />
+	<panel title="3. Insert / update the document" border="normal">
+		<panelchildren>
+			<button label="Insert / Update" forward="onUpdate" />
+		</panelchildren>
+	</panel>
 </window>
