--- a/WebContent/WEB-INF/zul/update/index.zul
+++ b/WebContent/WEB-INF/zul/update/index.zul
@@ -17,14 +17,18 @@
 <tabbox>
 	<tabs>
 		<tab id="tabUpdateForm" label="Using form" selected="true" />
-		<tab id="tabUpdateUpload" label="upload XML file" />
+		<tab id="tabUpdateUploadXml" label="upload XML file" />
+		<tab id="tabUpdateUploadDocument" label="Upload document" />
 	</tabs>
 	<tabpanels>
 		<tabpanel>
 			<include src="WEB-INF/zul/update/form.zul" />
 		</tabpanel>
-		<tabpanel fulfill="tabUpdateUpload.onSelect">
-			<include src="WEB-INF/zul/update/upload.zul" />
+		<tabpanel fulfill="tabUpdateUploadXml.onSelect">
+			<include src="WEB-INF/zul/update/uploadXml.zul" />
+		</tabpanel>
+		<tabpanel fulfill="tabUpdateUploadDocument.onSelect">
+			<include src="WEB-INF/zul/update/uploadDocument.zul" />
 		</tabpanel>
 	</tabpanels>
 </tabbox>
