--- a/WebContent/WEB-INF/zul/update/uploadDocument.zul
+++ b/WebContent/WEB-INF/zul/update/uploadDocument.zul
@@ -15,28 +15,15 @@
 	copy of the GNU General Public License along with Jaeksoft OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="basketList"
-	use="com.jaeksoft.searchlib.web.controller.basket.ListController">
-	<listbox model="@{basketList.client.basketCache.tree}"
-		multiple="false" mold="paging"
-		selectedItem="@{basketList.currentBasketDocument}">
-		<listhead>
-			<listheader label="Key" />
-			<listheader label="Source" />
-			<listheader label="Title" />
-		</listhead>
-		<listitem self="@{each='entry'}">
-			<listcell label="@{entry.key}" />
-			<listcell label="@{entry.value.source}" />
-			<listcell label="@{entry.value.firstTitle}" />
-		</listitem>
-	</listbox>
+<window id="basketUpload"
+	use="com.jaeksoft.searchlib.web.controller.update.UploadDocumentController">
+	<hbox width="100%" align="center">
+		<button label="Upload a document" forward="onUpload" />
+		<button visible="@{basketUpload.currentDocumentValid}"
+			label="Save document in basket" forward="onSave" />
+	</hbox>
 	<separator />
-	<panel id="basketDocumentPanel" border="normal"
-		visible="@{basketList.currentBasketDocumentValid}"
-		title="List of documents in the basket">
-		<toolbar>
-			<button label="Remove document" forward="onRemoveDocument" />
-		</toolbar>
-	</panel>
+	<panel id="basketDocumentPanel"
+		visible="@{basketUpload.currentDocumentValid}"
+		title="Basket document" />
 </window>
