Fixed bug 2863639: Prefix query changes term to lowercase

--- a/WebContent/WEB-INF/zul/query/general.zul
+++ b/WebContent/WEB-INF/zul/query/general.zul
@@ -31,7 +31,7 @@
 			<row>
 				<label>Enter the query:</label>
 				<textbox value="@{general.request.queryString}"
-					width="90%" constraint="no empty" />
+					width="90%" />
 			</row>
 			<row>
 				<label>Default operator:</label>
