Tracker id 2812172 :To crawl files

--- a/WebContent/WEB-INF/zul/crawler/file/path.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/path.zul
@@ -74,7 +74,7 @@
 
 		</auxhead>
 		<listitem self="@{each='file'}">
-			<listcell label="@{file.path}" />
+			<listcell label="@{file.uri}" />
 			<listcell label="@{file.when}" />
 			<listcell label="@{file.extension}" />
 			<listcell label="@{file.humanSize}" />
