--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -19,7 +19,7 @@
 	use="com.jaeksoft.searchlib.web.controller.IndexController">
 	<caption image="images/oss_16x16_WEB.png"
 		label="Open Search Server 1.1-dev">
-		<toolbarbutton label="Visit OSS web site" target="_blank"
+		<toolbarbutton label="Visit the OSS web site" target="_blank"
 			href="http://www.open-search-server.com" />
 		<space width="10px" />
 		<toolbarbutton label="Wiki documentation" target="_blank"
