--- a/WebContent/WEB-INF/zul/crawler/file/browser.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/browser.zul
@@ -18,67 +18,78 @@
 <window id="browser"
 	use="com.jaeksoft.searchlib.web.controller.crawler.file.BrowserController">
 
-	<hbox>
-		<vbox>
-			<listbox model="@{browser.files}"
-				selectedItem="@{browser.selectedFilePath}" height="500px">
-				<auxhead>
-					<auxheader colspan="2">
-						<button label="Back" forward="onBack" />
-						<button label="Refresh" forward="onRefresh" />
-					</auxheader>
+	<grid>
+		<columns>
+			<column width="43%">
+				<listbox model="@{browser.files}"
+					selectedItem="@{browser.selectedFilePath}" height="500px"
+					width="100%">
+					<auxhead>
+						<auxheader colspan="2">
+							<button label="Back" forward="onBack" />
+							<button label="Refresh" forward="onRefresh" />
+						</auxheader>
 
-				</auxhead>
-				<listhead>
-					<listheader align="center" width="25px" label="" />
-					<listheader align="left" label="Name" />
-				</listhead>
+					</auxhead>
+					<listhead>
+						<listheader align="center" width="25px"
+							label="" />
+						<listheader align="left" label="Name" />
+					</listhead>
 
-				<listitem self="@{each='field'}">
-					<listcell image="/images/file.png"
-						visible="@{field.file}" />
-					<listcell image="/images/directory.png"
-						visible="@{field.directory}" />
-					<listcell label="@{field}"
-						onDoubleClick="browser.onDoubleClick(self)" />
-				</listitem>
-			</listbox>
+					<listitem self="@{each='field'}">
+						<listcell image="/images/file.png"
+							visible="@{field.file}" />
+						<listcell image="/images/directory.png"
+							visible="@{field.directory}" />
+						<listcell label="@{field}"
+							onDoubleClick="browser.onDoubleClick(self)" />
+					</listitem>
+				</listbox>
+			</column>
 
-		</vbox>
+			<column>
+				<grid align="center" width="100%" fixedLayout="true">
+					<rows>
+						<row align="center">
+							<label>With all sub-directories</label>
+						</row>
+						<row align="center">
+							<checkbox
+								checked="@{browser.selectedFileCheck}"
+								disabled="@{browser.selectedFile.file}" />
+						</row>
+						<row align="center">
+							<button label="Add" forward="onAdd"
+								width="80px" />
+						</row>
+					</rows>
+				</grid>
+			</column>
 
-		<vbox>
-			<grid>
-				<rows>
-					<row height="80px">
-						<checkbox checked="@{browser.selectedFileCheck}"
-							label="With all sub-directories"
-							disabled="@{browser.selectedFile.file}" />
-					</row>
-					<row>
-						<button label="Add" forward="onAdd"
-							width="80px" />
-					</row>
-				</rows>
-			</grid>
-		</vbox>
+			<column width="43%">
+				<vbox width="100%">
+					<listbox itemRenderer="@{browser}"
+						model="@{browser.pathItem.list}" height="500px">
+						<listhead>
+							<listheader label="Selection" />
+							<listheader label="With all" width="50px" />
+							<listheader label="Reset" width="50px" />
+							<listheader label="Remove" width="60px" />
+						</listhead>
+						<listfoot>
+							<listfooter span="4">
+								<paging id="paging" detailed="true"
+									totalSize="@{browser.totalSize}" pageSize="@{browser.pageSize}"
+									activePage="@{browser.activePage}" />
+							</listfooter>
+						</listfoot>
+					</listbox>
+				</vbox>
+			</column>
+		</columns>
+	</grid>
 
-		<vbox>
-			<listbox itemRenderer="@{browser}"
-				model="@{browser.pathItem.list}" height="500px">
-				<listhead>
-					<listheader label="Selection" />
-					<listheader label="With all" width="50px" />
-					<listheader label="Reset" width="50px" />
-					<listheader label="Remove" width="60px" />
-				</listhead>
-				<listfoot>
-					<listfooter span="4">
-						<paging id="paging" detailed="true"
-							totalSize="@{browser.totalSize}" pageSize="@{browser.pageSize}"
-							activePage="@{browser.activePage}" />
-					</listfooter>
-				</listfoot>
-			</listbox>
-		</vbox>
-	</hbox>
+
+
 </window>
